--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ html {
   border: none;
   background-color: black;
   box-shadow: 5px 3px 30px 25px rgba(14, 216, 179, 0.673);
-  margin-top: 100px;
+  margin-top: 70px;
    border: 2pt solid orange;
 }
 
@@ -104,7 +104,7 @@ html {
   box-shadow: 5px 3px 30px 25px rgba(14, 216, 179, 0.673);
   border: 3pt solid orange;
   padding: 2%;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .education-section {
@@ -145,6 +145,34 @@ html {
   color: white;
 }
 
+/* Contact Section Styles */
+.contact-section{
+  display: flex;
+  justify-content: center;
+  background-color: #4d4d4d;
+}
+.contact-me-title{
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+}
+.contact-us-form{
+  display: flex;
+  justify-content: center;
+  width: 750px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  padding: 30px;
+  background-color: black;
+  box-shadow: 5px 3px 30px 25px rgba(14, 216, 179, 0.673);
+  border: 3pt solid orange;
+  
+
+}
+.form-control{
+  width: 500px;
+}
+
 /* Footer Section Styles */
 .site-footer {
   padding: 40px 0;
@@ -172,7 +200,7 @@ html {
   background-color: #333;
   border: 2pt solid rgb(213, 166, 79);
   box-shadow: 3px 1px 20px 10px rgba(14, 216, 179, 0.673);
-  margin-top: 30px;
+  margin-top: 70px;
   display: inline-block; /* Display icons inline */
   vertical-align: middle; /* Align icons vertically */
 }
